# opticlient

./: .gitignore  DESCRIPTION.md  README.md  pyproject.toml
src/opticlient/: __init__.py  client.py  config.py  http.py
src/opticlient/tools/: __init__.py  base.py  maxsat.py  sms.py  sms_parser.py
src/opticlient/utils/: __init__.py  ziptools.py
tests/: test_api_response.py  test_sms_client.py  test_sms_parser_and_run.py
